@@ -643,7 +643,8 @@ sub gst_network_sysconfig_pld10_ifaces_get_existing
 
 sub gst_network_slackware91_ifaces_get_existing
 {
-  my $file = "$gst_prefix/etc/rc.d/rc.inet1.conf";
+  my $file = "/etc/rc.d/rc.inet1.conf";
+  my $pppscript = "/etc/ppp/pppscript";
   my ($fd, $i, @ret);
 
   $fd = &gst_file_open_read_from_names ($file);
@@ -651,13 +652,19 @@ sub gst_network_slackware91_ifaces_get_existing
 
   while ($i = <$fd>)
   {
-      if ($i =~ /^[ \t]*IPADDR\[(\S+)\][ \t]*=[ \t]*"(.*)"/)
-      {
-        push @ret, "eth$1" if ($2 ne "");
-      }
+    if ($i =~ /^[ \t]*(IPADDR|USE_DHCP)\[(\S+)\][ \t]*=[ \t]*"(.*)"/)
+    {
+      push @ret, "eth$2" if ($3 ne "");
+    }
   }
 
   &gst_file_close ($fd);
+
+  if (&gst_file_exists ($pppscript))
+  {
+    push @ret, "ppp0";
+  }
+
   return @ret;
 }
 
@@ -972,6 +979,84 @@ sub gst_network_suse70_activate_ppp
   }
 
   return 0;
+}
+
+sub gst_network_slackware91_create_pppscript
+{
+  my ($pppscript) = @_;
+  my ($contents);
+  local *FILE;
+
+  if (!&gst_file_exists ($pppscript))
+  {
+    # create a template file from scratch
+    $contents  = 'TIMEOUT 60' . "\n";
+    $contents .= 'ABORT ERROR' . "\n";
+    $contents .= 'ABORT BUSY' . "\n";
+    $contents .= 'ABORT "NO CARRIER"' . "\n";
+    $contents .= 'ABORT "NO DIALTONE"' . "\n";
+    $contents .= '"" "AT&FH0"' . "\n";
+    $contents .= 'OK "ATDT000000000"' . "\n";
+    $contents .= 'TIMEOUT 75' . "\n";
+    $contents .= 'CONNECT' . "\n";
+
+    open FILE, ">$gst_prefix/$pppscript";
+    print FILE $contents;
+    close FILE;
+  }
+}
+
+sub gst_network_slackware91_create_pppgo
+{
+  my ($pppgo) = "/usr/sbin/ppp-go";
+  my ($contents, $pppd, $chat);
+  local *FILE;
+
+  if (!&gst_file_exists ($pppgo))
+  {
+    $pppd = &gst_file_locate_tool ("pppd");
+    $chat = &gst_file_locate_tool ("chat");
+    
+    # create a simple ppp-go from scratch
+    # this script is based on the one that's created by pppsetup
+    $contents  = "killall -INT pppd 2>/dev/null \n";
+    $contents .= "rm -f /var/lock/LCK* /var/run/ppp*.pid \n";
+    $contents .= "( $pppd connect \"$chat -v -f /etc/ppp/pppscript\") || exit 1 \n";
+    $contents .= "exit 0 \n";
+
+    open FILE, ">$gst_prefix/$pppgo";
+    print FILE $contents;
+    close FILE;
+  }
+}
+
+sub gst_network_get_modem_volume
+{
+  my ($file) = @_;
+  my ($volume);
+
+  $volume = &gst_parse_chat ($file, "AT.*(M0|L[1-3])");
+
+  return 3 if ($volume eq undef);
+
+  $volume =~ s/^[ml]//i;
+  return $volume;
+}
+
+sub gst_network_set_modem_volume
+{
+  my ($file, $volume) = @_;
+  my $line;
+
+  $line = &gst_parse_chat ($file, "AT([^DZ][a-z0-9&]+)");
+  $line =~ s/(M0|L[1-3])//g;
+
+  if    ($volume == 0) { $line .= "M0"; }
+  elsif ($volume == 1) { $line .= "L1"; }
+  elsif ($volume == 2) { $line .= "L2"; }
+  else                 { $line .= "L3"; }
+
+  return &gst_replace_chat ($file, "AT([^DZ][a-z0-9&]+)", $line);
 }
 
 sub gst_network_interfaces_get
@@ -1396,21 +1481,27 @@ sub gst_network_suse70_interface_activate
 sub gst_network_slackware91_interface_activate_by_dev
 {
   my ($dev, $enabled) = @_;
+  my ($ret) = 0;
 
   &gst_report_enter ();
-                                                                                                                                                             
+
   if ($enabled)
   {
     &gst_report ("network_iface_activate", $dev);
-    return -1 if &gst_file_run ("ifconfig $dev up");
+
+    $ret = &gst_file_run ("ifconfig $dev up") if ($dev =~ /^eth/);
+    $ret = &gst_file_run ("ppp-go") if ($dev =~ /^ppp/);
   }
   else
   {
     &gst_report ("network_iface_deactivate", $dev);
-    return -1 if &gst_file_run ("ifconfig $dev down");
+
+    $ret = &gst_file_run ("ifconfig $dev down") if ($dev =~ /^eth/);
+    $ret = &gst_file_run ("ppp-off") if ($dev =~ /^ppp/);
   }
 
   &gst_report_leave ();
+  return -1 if ($ret != 0);
   return 0;
 }
 
@@ -1553,14 +1644,26 @@ sub gst_network_pld10_interface_delete
 sub gst_network_slackware91_interface_delete
 {
   my ($old_hash) = @_;
-  my $file = "$gst_prefix/etc/rc.d/rc.inet1.conf";
+  my $rcinetconf = "$gst_prefix/etc/rc.d/rc.inet1.conf";
+  my $rcinet = "$gst_prefix/etc/rc.d/rc.inet1";
+  my $pppscript = "$gst_prefix/etc/ppp/pppscript";
   my $dev = $$old_hash {"dev"};
 
-  # empty the values
-  &gst_replace_rcinet1conf ($file, $dev, "IPADDR", "");
-  &gst_replace_rcinet1conf ($file, $dev, "NETMASK", "");
-  &gst_replace_rcinet1conf ($file, $dev, "USE_DHCP", "");
-  &gst_replace_rcinet1conf ($file, $dev, "DHCP_HOSTNAME", "");
+  # remove ifup/ppp-go at startup if existing
+  &gst_network_slackware91_set_auto ($rcinet, $dev);
+
+  if ($dev =~ /^eth/)
+  {
+    # empty the values
+    &gst_replace_rcinet1conf ($rcinetconf, $dev, "IPADDR", "");
+    &gst_replace_rcinet1conf ($rcinetconf, $dev, "NETMASK", "");
+    &gst_replace_rcinet1conf ($rcinetconf, $dev, "USE_DHCP", "");
+    &gst_replace_rcinet1conf ($rcinetconf, $dev, "DHCP_HOSTNAME", "");
+  }
+  elsif ($dev =~ /^ppp/)
+  {
+    &gst_file_remove ($pppscript);
+  }
 }
 
 sub gst_network_interface_changed
@@ -1684,12 +1787,25 @@ sub gst_network_get_pap_passwd
   &gst_report_enter ();
   &gst_report ("network_get_pap_passwd", $login, $file);
   $arr = &gst_parse_split_first_array ($file, $login, "[ \t]+", "[ \t]+");
+
   $passwd = $$arr[1];
   &gst_report_leave ();
 
   $passwd =~ s/^\"([^\"]*)\"$/$1/;
   
   return $passwd;
+}
+
+sub gst_network_set_pap_passwd
+{
+  my ($file, $login, $passwd) = @_;
+  my ($line);
+
+  $login = '"' . $login . '"';
+  $passwd = '"'. $passwd . '"';
+  $line = "* $passwd";
+
+  return &gst_replace_split ($file, $login, "[ \t]+", $line);
 }
 
 # These functions do not honour the file nor call directives.
@@ -1723,7 +1839,7 @@ sub gst_network_set_ppp_options_re
 
   &gst_report_enter ();
   &gst_report ("network_set_ppp_option", &gst_replace_regexp_to_separator ($re), $file);
-  
+
   $buff = &gst_file_buffer_load ($file);
 
   foreach $line (@$buff)
@@ -1769,7 +1885,7 @@ sub gst_network_get_ppp_options_unsup
   my ($fd, $line, $res, $re);
   my @known_options = ("usepeerdns", "mtu", "mru", "user", "/dev/[^ \t]+", "[0-9]+",
                        "defaultroute", "debug", "persist", "escape", "crtscts", "connect",
-                       "remotename", "hide-password", "noauth", "noipdefault", "ipparam");
+                       "remotename", "hide-password", "noauth", "noipdefault", "ipparam", "name \".*\"");
 
   $res = "";
   &gst_report_enter ();
@@ -1803,7 +1919,7 @@ sub gst_network_set_ppp_options_unsup
   my ($pre_space, $post_comment);
   my @known_options = ("usepeerdns", "mtu", "mru", "user", "/dev/[^ \t]+", "[0-9]+",
                        "defaultroute", "debug", "persist", "escape", "crtscts", "connect",
-                       "remotename", "hide-password", "noauth", "noipdefault", "ipparam");
+                       "remotename", "hide-password", "noauth", "noipdefault", "ipparam", "name \".*\"");
   
   # The options in the last row are those that are on by default in pppd and we don't handle,
   # so we ignore them, as they are set implicitly if not specified.
@@ -1822,7 +1938,7 @@ sub gst_network_set_ppp_options_unsup
     {
       next GET_LINE if $line =~ /^$re/;
     }
-    $line = $pre_space . $post_comment;
+    $line = $pre_space . $post_comment . "\n";
     $line = "" if $line =~ /^[ \t]*$/;
   }
   
@@ -2175,6 +2291,98 @@ sub gst_network_debian_woody_set_auto
   return &gst_file_buffer_save ($buff, $file);
 }
 
+# looks for eth_up $eth_iface_number
+sub gst_network_slackware91_get_auto
+{
+  my ($file, $rclocal, $iface) = @_;
+  my ($search) = 0;
+  my ($buff);
+
+  if ($iface =~ /^eth/)
+  {
+    $buff = &gst_file_buffer_load ($file);
+    &gst_file_buffer_join_lines ($buff);
+
+    $iface =~ s/eth//;
+
+    foreach $i (@$buff)
+    {
+      if ($i =~ /^[ \t]*'start'\)/)
+      {
+        $search = 1;
+      }
+      elsif (($i =~ /^[ \t]*;;/) && ($search == 1))
+      {
+        return 0;
+      }
+      elsif (($i =~ /^[ \t]*eth_up (\S+)/) && ($search == 1))
+      {
+        return 1 if ($1 == $iface);
+      }
+    }
+
+    return 0;
+  }
+  elsif ($iface =~ /^ppp/)
+  {
+    return &gst_parse_kw ($rclocal, "ppp-go");
+  }
+}
+
+# adds or deletes eth_up $eth_iface_number
+sub gst_network_slackware91_set_auto
+{
+  my ($file, $rclocal, $iface, $active) = @_;
+  my ($search) = 0;
+  my ($nline) = 0;
+  my ($buff, $sline);
+
+  if ($iface =~ /^eth/)
+  {
+    $buff = &gst_file_buffer_load ($file);
+    &gst_file_buffer_join_lines ($buff);
+
+    $iface =~ s/eth//;
+
+    foreach $i (@$buff)
+    {
+      if ($i =~ /^[ \t]*('start'\)|\*\))/)
+      {
+        # if the line is 'start') or *), begin the search
+        $search = 1;
+      }
+      elsif (($i =~ /^[ \t]*gateway_up/) && ($search == 1))
+      {
+        # save the line in which we're going to save the eth_up stuff
+        $sline = $nline;
+      }
+      elsif (($i =~ /^[ \t]*(;;|esac)/) && ($search == 1))
+      {
+        # we've arrived to the end of the case, if we wanted to
+        # add the iface, now it's the moment
+        $$buff[$sline] = "\teth_up $iface\n" . $$buff[$sline] if ($active == 1);
+        $search = 0;
+      }
+      elsif (($i =~ /^[ \t]*eth_up (\S+)/) && ($search == 1))
+      {
+        if ($1 == $iface)
+        {
+          delete $$buff[$nline] if ($active == 0);
+          $search = 0;
+        }
+      }
+
+      $nline++;
+    }
+
+    return &gst_file_buffer_save ($buff, $file);
+  }
+  elsif ($iface =~ /^ppp/)
+  {
+    return &gst_replace_kw ($rclocal, "ppp-go", $active);
+  }
+}
+
 # Return IP address or netmask, depending on $what
 sub gst_network_pld10_get_ipaddr
 {
@@ -2248,6 +2456,61 @@ sub gst_network_pld10_set_ipaddr
   }
 
   return &gst_replace_sh($file, $key, $ipaddr);
+}
+
+# FIXME: this function isn't IPv6-aware
+sub gst_network_slackware91_get_gateway
+{
+  my ($file, $address, $netmask) = @_;
+  my ($gateway, $i);
+  my (@add1, @add2, @mask);
+
+  return undef if ($address eq undef);
+
+  $gateway = gst_parse_sh ($file, "GATEWAY");
+
+  @add1 = split (/\./, $address);
+  @add2 = split (/\./, $gateway);
+  @mask = split (/\./, $netmask);
+
+  for ($i = 0; $i < 4; $i++)
+  {
+    $add1[$i] += 0;
+    $add2[$i] += 0;
+    $mask[$i] += 0;
+
+    return undef if (($add1[$i] & $mask[$i]) != ($add2[$i] & $mask[$i]));
+  }
+
+  return $gateway;
+}
+
+sub gst_network_slackware91_get_gateway_dev
+{
+  my ($file, $interface) = @_;
+  my ($address, $netmask);
+
+  foreach $key (keys %$interface) {
+    $address = $$interface{$key}{"address"};
+    $netmask = $$interface{$key}{"netmask"};
+
+    return $key if (&gst_network_slackware91_get_gateway ($file, $address, $netmask) ne undef);
+  }
+
+  return undef;
+}
+
+# runs a function if the interface is of type $type
+sub gst_network_check_iface
+{
+  my ($iface) = shift @_;
+  my ($type) =  shift @_;
+  my ($func) =  shift @_;
+
+  if ($iface =~ "^$type")
+  {
+    &$func (@_);
+  }
 }
 
 # Set dist_map for your distro to "" if you don't want
@@ -2638,8 +2901,6 @@ sub gst_network_get_parse_table
       table =>
       [
        [ "hostname",      \&gst_parse_slackware_hostname, HOSTNAME ],
-       [ "gwdevunsup",    \&gst_parse_trivial,           1 ],
-       [ "userifacectl",  \&gst_parse_trivial,           1 ],
        [ "nameserver",    \&gst_parse_split_all_unique_hash_comment, RESOLV_CONF,  "nameserver", "[ \t]+" ],
        [ "searchdomain",  \&gst_parse_split_first_array_unique, RESOLV_CONF,  "search", "[ \t]+", "[ \t]+" ],
        [ "domain",        \&gst_parse_split_first_str,   RESOLV_CONF,  "domain", "[ \t]+" ],
@@ -2652,9 +2913,10 @@ sub gst_network_get_parse_table
        [ "winsuse",       \&gst_parse_ini_bool,          SMB_CONF,     "global", "wins support" ],
        [ "smbuse",        \&gst_service_sysv_get_status_any, "smbd", "nmbd" ],
        [ "smbinstalled",  \&gst_service_installed,  "/etc/rc.d/rc.samba" ],
-       [ "dialinstalled", \&gst_file_tool_installed,     "wvdial" ],
-       [ "dialing",       \&gst_network_dialing_get,     WVDIAL ],
-       [ "interface",     \&gst_network_interfaces_get ]
+       [ "dialinstalled", \&gst_parse_trivial, 1 ],
+       [ "interface",     \&gst_network_interfaces_get ],
+       [ "gateway",       \&gst_parse_sh,                RC_INET_CONF, GATEWAY ],
+       [ "gatewaydev",    \&gst_network_slackware91_get_gateway_dev, RC_INET_CONF, "%interface%" ],
       ]
     }
    );
@@ -3099,21 +3361,46 @@ sub gst_network_get_interface_parse_table
       ifaces_get => \&gst_network_slackware91_ifaces_get_existing,
       fn =>
       {
-        INTERFACES  => "/etc/rc.d/rc.inet1.conf",
-        IFACE       => "#iface#",
-        WIRELESS    => "/etc/pcmcia/wireless.opts",
+        RC_INET_CONF => "/etc/rc.d/rc.inet1.conf",
+        RC_INET      => "/etc/rc.d/rc.inet1",
+        RC_LOCAL     => "/etc/rc.d/rc.local",
+        IFACE        => "#iface#",
+        WIRELESS     => "/etc/pcmcia/wireless.opts",
+        PPP_OPTIONS  => "/etc/ppp/options",
+        PAP          => "/etc/ppp/pap-secrets",
+        CHAP         => "/etc/ppp/chap-secrets",
+        CHAT         => "/etc/ppp/pppscript",
       },
       table =>
       [
        [ "user",               \&gst_parse_trivial,                  0 ], # not supported.
        [ "dev",                \&gst_parse_trivial,                  IFACE ],
-       [ "address",            \&gst_parse_rcinet1conf,              [INTERFACES, IFACE], IPADDR ],
-       [ "netmask",            \&gst_parse_rcinet1conf,              [INTERFACES, IFACE], NETMASK ],
-       [ "gateway",            \&gst_parse_sh,                       INTERFACES, GATEWAY ],
-       [ "auto",               \&gst_parse_trivial,                  1 ],
-       [ "bootproto",          \&gst_network_slackware91_parse_bootproto, [INTERFACES, IFACE]],
+       [ "address",            \&gst_parse_rcinet1conf,              [RC_INET_CONF, IFACE], IPADDR ],
+       [ "netmask",            \&gst_parse_rcinet1conf,              [RC_INET_CONF, IFACE], NETMASK ],
+       [ "gateway",            \&gst_network_slackware91_get_gateway, RC_INET_CONF, "%address%", "%netmask%" ],
+       [ "auto",               \&gst_network_slackware91_get_auto,   [RC_INET, RC_LOCAL, IFACE]],
+       [ "bootproto",          \&gst_network_slackware91_parse_bootproto, [RC_INET_CONF, IFACE]],
        [ "essid",              \&gst_parse_wireless_opts,            [ WIRELESS, IFACE], \&gst_network_get_wireless_ifaces, ESSID ],
        [ "enabled",            \&gst_network_interface_active,       IFACE, \&gst_network_active_interfaces_get ],
+       # Modem stuff
+       [ "update_dns",         \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_kw, PPP_OPTIONS, "usepeerdns" ]],
+       [ "noauth",             \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_kw, PPP_OPTIONS, "noauth" ]],
+       [ "mtu",                \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_split_first_str, PPP_OPTIONS, "mtu", "[ \t]+" ]],
+       [ "mru",                \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_split_first_str, PPP_OPTIONS, "mru", "[ \t]+" ]],
+       [ "serial_port",        \&gst_network_check_iface,            [IFACE, "ppp", \&gst_network_get_ppp_options_re, PPP_OPTIONS, "^(/dev/[^ \t]+)" ]],
+       [ "serial_speed",       \&gst_network_check_iface,            [IFACE, "ppp", \&gst_network_get_ppp_options_re, PPP_OPTIONS, "^([0-9]+)" ]],
+       [ "login",              \&gst_network_check_iface,            [IFACE, "ppp", \&gst_network_get_ppp_options_re, PPP_OPTIONS, "^name \"(.*)\"" ]],
+       [ "password",           \&gst_network_check_iface,            [IFACE, "ppp", \&gst_network_get_pap_passwd, PAP, "%login%" ]],
+       [ "password",           \&gst_network_check_iface,            [IFACE, "ppp", \&gst_network_get_pap_passwd, CHAP, "%login%" ]],
+       [ "ppp_options",        \&gst_network_check_iface,            [IFACE, "ppp", \&gst_network_get_ppp_options_unsup, PPP_OPTIONS ]],
+       [ "set_default_gw",     \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_kw, PPP_OPTIONS, "defaultroute" ]],
+       [ "debug",              \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_kw, PPP_OPTIONS, "debug" ]],
+       [ "persist",            \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_kw, PPP_OPTIONS, "persist" ]],
+       [ "serial_escapechars", \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_split_first_str, PPP_OPTIONS, "escape", "[ \t]+" ]],
+       [ "serial_hwctl",       \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_kw, PPP_OPTIONS, "crtscts" ]],
+       [ "phone_number",       \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_chat, CHAT, "atd[^0-9]*([0-9, -]+)" ]],
+       [ "dial_command",       \&gst_network_check_iface,            [IFACE, "ppp", \&gst_parse_chat, CHAT, "(atd[tp])[0-9, -]+" ]],
+       [ "volume",             \&gst_network_check_iface,            [IFACE, "ppp", \&gst_network_get_modem_volume, CHAT ]],
        ]
       }
 	  );
@@ -3393,6 +3680,7 @@ sub gst_network_get_replace_table
       [
        [ "hostname",      \&gst_replace_slackware_hostname, HOSTNAME, "%hostname%", "%domain%" ],
        [ "hostname",      \&gst_network_run_hostname ],
+       [ "gateway",       \&gst_replace_rcinet1conf_global, RC_INET_CONF, GATEWAY ],
        [ "domain",        \&gst_replace_join_first_str,   RESOLV_CONF, "domain", "[ \t]+" ],
        [ "nameserver",    \&gst_replace_join_all,         RESOLV_CONF, "nameserver", "[ \t]+" ],
        [ "searchdomain",  \&gst_replace_join_first_array, RESOLV_CONF, "search", "[ \t]+", "[ \t]+" ],
@@ -3823,17 +4111,44 @@ sub gst_network_get_interface_replace_table
      ifaces_get => \&gst_network_slackware91_ifaces_get_existing,
      fn =>
      {
-       INTERFACES  => "/etc/rc.d/rc.inet1.conf",
-       IFACE       => "#iface#",
-       WIRELESS    => "/etc/pcmcia/wireless.opts",
+       RC_INET_CONF => "/etc/rc.d/rc.inet1.conf",
+       RC_INET      => "/etc/rc.d/rc.inet1",
+       RC_LOCAL     => "/etc/rc.d/rc.local",
+       IFACE        => "#iface#",
+       WIRELESS     => "/etc/pcmcia/wireless.opts",
+       PPP_OPTIONS  => "/etc/ppp/options",
+       PAP          => "/etc/ppp/pap-secrets",
+       CHAP         => "/etc/ppp/chap-secrets",
+       CHAT         => "/etc/ppp/pppscript",
      },
      table =>
      [
-      [ "gateway",       \&gst_replace_rcinet1conf_global,            INTERFACES, GATEWAY ],
-      [ "address",       \&gst_replace_rcinet1conf,                   [ INTERFACES, IFACE ], IPADDR ],
-      [ "netmask",       \&gst_replace_rcinet1conf,                   [ INTERFACES, IFACE ], NETMASK ],
-      [ "bootproto",     \&gst_network_slackware91_replace_bootproto, [ INTERFACES, IFACE ] ],
-      [ "essid",         \&gst_replace_wireless_opts,                 [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, ESSID ]
+      [ "address",            \&gst_replace_rcinet1conf,                   [ RC_INET_CONF, IFACE ], IPADDR ],
+      [ "netmask",            \&gst_replace_rcinet1conf,                   [ RC_INET_CONF, IFACE ], NETMASK ],
+      [ "bootproto",          \&gst_network_slackware91_replace_bootproto, [ RC_INET_CONF, IFACE ] ],
+      [ "auto",               \&gst_network_slackware91_set_auto,          [ RC_INET, RC_LOCAL, IFACE ] ],
+      [ "essid",              \&gst_replace_wireless_opts,                 [ WIRELESS, IFACE ], \&gst_network_get_wireless_ifaces, ESSID ],
+      # Modem stuff
+      [ "phone_number",       \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_slackware91_create_pppscript, CHAT ]],
+      [ "phone_number",       \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_slackware91_create_pppgo ]],
+      [ "update_dns",         \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_kw, PPP_OPTIONS, "usepeerdns" ]],
+      [ "noauth",             \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_kw, PPP_OPTIONS, "noauth" ]],
+      [ "set_default_gw",     \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_kw, PPP_OPTIONS, "defaultroute" ]],
+      [ "debug",              \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_kw, PPP_OPTIONS, "debug" ]],
+      [ "persist",            \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_kw, PPP_OPTIONS, "persist" ]],
+      [ "serial_hwctl",       \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_kw, PPP_OPTIONS, "crtscts" ]],
+      [ "mtu",                \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_join_first_str, PPP_OPTIONS, "mtu", "[ \t]+" ]],
+      [ "mru",                \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_join_first_str, PPP_OPTIONS, "mru", "[ \t]+" ]],
+      [ "serial_port",        \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_set_ppp_options_re, PPP_OPTIONS, "^(/dev/[^ \t]+)" ]],
+      [ "serial_speed",       \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_set_ppp_options_re, PPP_OPTIONS, "^([0-9]+)" ]],
+      [ "login",              \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_set_ppp_options_re, PPP_OPTIONS, "^name \"(.*)\"", "name \"%login%\"" ]],
+      [ "ppp_options",        \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_set_ppp_options_unsup, PPP_OPTIONS ]],
+      [ "serial_escapechars", \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_join_first_str, PPP_OPTIONS, "escape", "[ \t]+" ]],
+      [ "password",           \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_set_pap_passwd, PAP, "%login%" ]],
+      [ "password",           \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_set_pap_passwd, CHAP, "%login%" ]],
+      [ "dial_command",       \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_chat, CHAT, "(atd[tp])[0-9, -]+" ]],
+      [ "phone_number",       \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_replace_chat, CHAT, "atd[^0-9]*([0-9, -]+)" ]],
+      [ "volume",             \&gst_network_check_iface,                   [IFACE, "ppp", \&gst_network_set_modem_volume, CHAT ]],
      ]
    }
   );
